# gpu_cuda

axpy/: CMakeLists.txt  benchmark.cpp  benchmark.h  benchmark.xlsx  output.txt
axpy/cpu/: CMakeLists.txt  kernel.cpp  kernel.h
axpy/cuda/: CMakeLists.txt  kernel.cu  kernel.h
axpy/omp/: CMakeLists.txt  kernel.cpp  kernel.h
gemm/: CMakeLists.txt  benchmark.h  main.cpp  matrix.h
gemm/cpu/: CMakeLists.txt  kernel.cpp  kernel.h
gemm/cuda/: kernel.cu  kernel.h
gemm/omp/: kernel.cpp  kernel.h
hello_cuda/: CMakeLists.txt  hello_cuda.sln  hello_cuda.vcxproj  kernel.cu
hello_cuda/x64/Debug/: hello_cuda.exe.recipe  hello_cuda.exp  hello_cuda.ilk  hello_cuda.lib  hello_cuda.vcxproj.FileListAbsolute.txt  kernel.cu.cache  kernel.cu1357160838.deps
hello_cuda/x64/Debug/hello_cuda.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  hello_cuda.lastbuildstate  hello_cuda.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
